# tilapia-lang

./: .gitignore  .prettierignore  README.md  TODO.md  a.out  dune-project  flake.nix  main.cpp  specification.md  test.txt  test2.txt  test3.txt  tilapia.opam
lib/: ast.ml  codegenx86.ml  driver.ml  dune  duneorig  en.ml  en.mli  es.ml  lexer.mll  literal.ml  parser.mly  printer.ml  template.ml  tokens.md  typ.ml  type.ml
lib/compiler/: tokens.ml  tokens.mli
lib/old/: lexer.mll  parser.mly
samples/: addc.asm  test.asm
test/: dune
test/input/: add.asm  string.asm  subs.asm  test.asm  word.asm
test/output/: add  string  subs  test1  testo  word
